--- a/pepeizqs deals web/Pages/Free.cshtml
+++ b/pepeizqs deals web/Pages/Free.cshtml
@@ -28,130 +28,8 @@
         }
     }
 
-    string titulo = Herramientas.Idiomas.BuscarTexto(idioma, "Title", "Free");
-
-    ViewData["Title"] = titulo;
+    ViewData["Title"] = Herramientas.Idiomas.BuscarTexto(idioma, "Title", "Free");
     Layout = "/Pages/Shared/_Layout.cshtml";
 
-    List<Juegos.JuegoGratis> juegosActuales = new List<Juegos.JuegoGratis>();
-    List<Juegos.JuegoGratis> juegosTodos = BaseDatos.Gratis.Buscar.Actuales();
-
-    if (juegosTodos.Count > 0)
-    {
-        foreach (var juego in juegosTodos)
-        {
-            if (DateTime.Now >= juego.FechaEmpieza && DateTime.Now <= juego.FechaTermina)
-            {
-                Juegos.Juego juego2 = BaseDatos.Juegos.Buscar.UnJuego(juego.JuegoId.ToString());
-
-                juego.Juego = juego2;
-
-                juegosActuales.Add(juego);
-            }
-        }
-
-        if (juegosActuales.Count > 0)
-        {
-            juegosActuales = juegosActuales.OrderBy(x => x.Nombre).ToList();
-
-            int juegos = 0;
-            int dlcs = 0;
-
-            foreach (var juego in juegosActuales)
-            {
-                if (juego.Juego.Tipo == Juegos.JuegoTipo.Game)
-                {
-                    juegos += 1;
-                }
-                else if (juego.Juego.Tipo == Juegos.JuegoTipo.DLC)
-                {
-                    dlcs += 1;
-                }
-            }
-
-            if (juegos == 0)
-            {
-                if (dlcs == 1)
-                {
-                    titulo = string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String6", "Free"), dlcs.ToString()) + " " + Herramientas.Idiomas.BuscarTexto(idioma, "String8", "Free");
-                }
-                else if (dlcs > 1)
-                {
-                    titulo = string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String7", "Free"), dlcs.ToString()) + " " + Herramientas.Idiomas.BuscarTexto(idioma, "String9", "Free");
-                }
-            }
-            else if (juegos > 0)
-            {
-                if (juegos == 1 && dlcs == 0)
-                {
-                    titulo = string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String3", "Free"), juegos.ToString()) + " " + Herramientas.Idiomas.BuscarTexto(idioma, "String8", "Free");
-                }
-                else if (juegos > 1 && dlcs == 0)
-                {
-                    titulo = string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String4", "Free"), juegos.ToString()) + " " + Herramientas.Idiomas.BuscarTexto(idioma, "String9", "Free");
-                }
-                else if (juegos == 1 && dlcs == 1)
-                {
-                    titulo = string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String3", "Free"), juegos.ToString()) + " " +
-                        Herramientas.Idiomas.BuscarTexto(idioma, "String5", "Free") + " " +
-                        string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String6", "Free"), dlcs.ToString()) + " " +
-                        Herramientas.Idiomas.BuscarTexto(idioma, "String9", "Free");
-                }
-                else if (juegos > 1 && dlcs == 1)
-                {
-                    titulo = string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String4", "Free"), juegos.ToString()) + " " +
-                        Herramientas.Idiomas.BuscarTexto(idioma, "String5", "Free") + " " +
-                        string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String6", "Free"), dlcs.ToString()) + " " +
-                        Herramientas.Idiomas.BuscarTexto(idioma, "String9", "Free");
-                }
-                else if (juegos == 1 && dlcs > 1)
-                {
-                    titulo = string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String3", "Free"), juegos.ToString()) + " " +
-                        Herramientas.Idiomas.BuscarTexto(idioma, "String5", "Free") + " " +
-                        string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String7", "Free"), dlcs.ToString()) + " " +
-                        Herramientas.Idiomas.BuscarTexto(idioma, "String9", "Free");
-                }
-                else if (juegos > 1 && dlcs > 1)
-                {
-                    titulo = string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String4", "Free"), juegos.ToString()) + " " +
-                        Herramientas.Idiomas.BuscarTexto(idioma, "String5", "Free") + " " +
-                        string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String7", "Free"), dlcs.ToString()) + " " +
-                        Herramientas.Idiomas.BuscarTexto(idioma, "String9", "Free");
-                }
-            }
-
-            if (string.IsNullOrEmpty(titulo) == true)
-            {
-                titulo = Herramientas.Idiomas.BuscarTexto(idioma, "String10", "Free");
-            }
-        }
-    }
-
-    string descripcion = Herramientas.Idiomas.BuscarTexto(idioma, "String11", "Free");
-
-    string enlace = "https://pepeizqdeals.com/free/";
-
-    bool seo = false;
-    string userAgent = string.Empty;
-
-    if (HttpContext != null)
-    {
-        userAgent = HttpContext.Request.Headers.UserAgent;
-
-        if (string.IsNullOrEmpty(userAgent) == false)
-        {
-            seo = Herramientas.RobotsUserAgents.EsBotVerificado(userAgent);
-        }
-    }
-
-    if (seo == true)
-    {
-        <component type="typeof(Componentes.Secciones.Seo)" render-mode="ServerPrerendered" param-idioma="idioma" param-titulo="titulo" param-descripcion="descripcion" param-enlace="enlace" param-canonical="enlace"/>
-
-        <component type="typeof(Componentes.Secciones.Gratis)" render-mode="ServerPrerendered" param-idioma="idioma" />
-    }
-    else
-    {
-        <component type="typeof(Componentes.Secciones.Gratis)" render-mode="Server" param-idioma="idioma" param-usuarioId="usuario?.Id" />
-    }
+    <component type="typeof(Componentes.Secciones.Gratis)" render-mode="Server" param-idioma="idioma" param-usuarioId="usuario?.Id" />
 }
