--- a/pepeizqs deals web/Pages/Bundles.cshtml
+++ b/pepeizqs deals web/Pages/Bundles.cshtml
@@ -28,66 +28,8 @@
 		}
 	}
 
-	string titulo = Herramientas.Idiomas.BuscarTexto(idioma, "Title", "Bundle");
-
-	List<Bundles2.Bundle> bundlesActuales = new List<Bundles2.Bundle>();
-	List<Bundles2.Bundle> bundles = BaseDatos.Bundles.Buscar.Actuales();
-
-	if (bundles.Count > 0)
-	{
-		foreach (var bundle in bundles)
-		{
-			if (DateTime.Now >= bundle.FechaEmpieza && DateTime.Now <= bundle.FechaTermina)
-			{
-				bundlesActuales.Add(bundle);
-			}
-		}
-
-		if (bundlesActuales.Count > 0)
-		{
-			if (bundlesActuales.Count == 1)
-			{
-				titulo = string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String16", "Bundle"), bundlesActuales.Count.ToString());
-			}
-			else if (bundlesActuales.Count > 1)
-			{
-				titulo = string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String17", "Bundle"), bundlesActuales.Count.ToString());
-			}
-		}
-		else if (bundlesActuales.Count == 0)
-		{
-			titulo = Herramientas.Idiomas.BuscarTexto(idioma, "String18", "Bundle");
-		}
-	}
-
-	ViewData["Title"] = titulo;
+	ViewData["Title"] = Herramientas.Idiomas.BuscarTexto(idioma, "Title", "Bundle");
 	Layout = "/Pages/Shared/_Layout.cshtml";
 
-	string enlace = "https://pepeizqdeals.com/bundles/";
-
-	string descripcion = Herramientas.Idiomas.BuscarTexto(idioma, "String19", "Bundle");
-
-	bool seo = false;
-	string userAgent = string.Empty;
-
-	if (HttpContext != null)
-	{
-		userAgent = HttpContext.Request.Headers.UserAgent;
-
-		if (string.IsNullOrEmpty(userAgent) == false)
-		{
-			seo = Herramientas.RobotsUserAgents.EsBotVerificado(userAgent);
-		}
-	}
-
-	if (seo == true)
-	{
-		<component type="typeof(Componentes.Secciones.Seo)" render-mode="Server" param-idioma="idioma" param-titulo="titulo" param-descripcion="descripcion" param-enlace="enlace" param-canonical="enlace" />
-
-		<component type="typeof(Componentes.Secciones.Bundles)" render-mode="Server" param-idioma="idioma"/>
-	}
-	else
-	{
-		<component type="typeof(Componentes.Secciones.Bundles)" render-mode="Server" param-idioma="idioma" param-usuarioId="usuario?.Id" />
-	}
+	<component type="typeof(Componentes.Secciones.Bundles)" render-mode="Server" param-idioma="idioma" param-usuarioId="usuario?.Id" />
 }
