--- a/pepeizqs deals web/Pages/Componentes/Secciones/Curator.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Curator.razor
@@ -7,241 +7,274 @@
 @inject UserManager<Usuario> UserManager
 @inject SignInManager<Usuario> SignInManager
 
-<div style="display: flex; flex-direction: column; gap: 40px;">
-	<div>
-		@if (string.IsNullOrEmpty(curator.ImagenFondo) == false)
-		{
-			<img src="@curator.ImagenFondo" style="object-fit: cover; width: 100%; max-height: 195px;" />
-		}
+@if (curator != null)
+{
+	string titulo = curator.Nombre + " (Curator) • pepeizq's deals";
+	string descripcion = Herramientas.Idiomas.BuscarTexto(idioma, "Subtitle", "Curators");
+	string enlace = "https://pepeizqdeals.com/curator/" + curator.Slug?.ToLower() + "/";
+	string imagen = "https://pepeizqdeals.com/logo/logoentrada.webp";
 
-		<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); display: flex; align-items: center;">
-			<img src="@curator.Imagen" style="width: 140px; height: 140px;" />
+	if (string.IsNullOrEmpty(curator.Descripcion) == false)
+	{
+		descripcion = curator.Descripcion;
+	}
 
-			<div style="display: flex; flex-direction: column; gap: 15px; padding: 25px;">
-				<div style="font-size: 20px;">
-					@if (curator.Web != null)
-					{
-						<a href="@curator.Web.Enlace" target="_blank">@curator.Nombre</a>
-					}
-					else
-					{
-						@curator.Nombre
-					}
-				</div>
+	if (string.IsNullOrEmpty(curator.Imagen) == false)
+	{
+		imagen = curator.Imagen;
+	}
 
-				<div>
-					@curator.Descripcion
+	<PageTitle>@titulo</PageTitle>
+	<HeadContent>
+		<meta name="og:title" Content="@titulo" />
+		<meta name="description" content="@descripcion" />
+		<meta name="og:description" content="@descripcion" />
+		<meta name="og:url" content="@enlace" />
+		<meta name="og:image" content="@imagen" />
+		<meta name="og:site_name" content="pepeizq's deals" />
+		<meta name="og:type" content="website" />
+		<meta name="robots" content="index, nofollow, noimageindex" />
+		<meta name="keywords" content="deals, games, free, offers, bundles" />
+
+		<link rel="canonical" href="@enlace" />
+	</HeadContent>
+
+	<div style="display: flex; flex-direction: column; gap: 40px;">
+		<div>
+			@if (string.IsNullOrEmpty(curator.ImagenFondo) == false)
+			{
+				<img src="@curator.ImagenFondo" style="object-fit: cover; width: 100%; max-height: 195px;" alt="Background" />
+			}
+
+			<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); display: flex; align-items: center;">
+				<img src="@curator.Imagen" style="width: 140px; height: 140px;" alt="@curator.Nombre" />
+
+				<div style="display: flex; flex-direction: column; gap: 15px; padding: 25px;">
+					<div style="font-size: 20px;">
+						@if (curator.Web != null)
+						{
+							<a href="@curator.Web.Enlace" target="_blank">@curator.Nombre</a>
+						}
+						else
+						{
+							@curator.Nombre
+						}
+					</div>
+
+					<div>
+						@curator.Descripcion
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>	
 
-	@if (juegosDestacados.Count > 1)
-	{
-		<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 40px;">
-			<div style="font-size: 18px;">
-				@Herramientas.Idiomas.BuscarTexto(idioma, "String1", "Curators")
-			</div>
-			<hr/>
-			<div style="display: grid; grid-template-columns: repeat(auto-fill, minmax(170px, 1fr)); gap: 20px; width: 100%;">
-				@foreach (var destacado in juegosDestacados)
-				{
-					bool usuarioTieneJuego = Herramientas.UsuarioJuegos.ComprobarSiTiene(juegosUsuario, destacado);
-					bool usuarioTieneDeseado = false;
-
-					string fondoColor = string.Empty;
-
-					if (usuarioTieneJuego == true)
-					{
-						fondoColor = "background-color: var(--fondoBien);";
-					}
-					else
-					{
-						usuarioTieneDeseado = Herramientas.Deseados.ComprobarSiEsta(usuario?.SteamWishlist, usuario?.Wishlist, usuario?.GogWishlist, destacado, Juegos.JuegoDRM.NoEspecificado, true);
-
-						if (usuarioTieneDeseado == true)
-						{
-							fondoColor = "background-color: var(--fondoAlerta);";
-						}
-					}
-
-					if (string.IsNullOrEmpty(fondoColor) == true)
-					{
-						fondoColor = "background-color: var(--fondoBotonPequeño);";
-					}
-
-					<a href="/game/@destacado.Id.ToString()/@Herramientas.EnlaceAdaptador.Nombre(destacado.Nombre)/" target="_blank" class="boton-pequeño" style="padding: 0px; @fondoColor">
-						<div style="display: flex; flex-direction: column; padding: 2px; height: 100%;" title="@destacado.Nombre">
-							<img src="@destacado.Imagenes.Library_600x900" style="max-width: 186px; max-height: 278px; object-fit: cover;" />
-
-							@{
-								string mensaje = Herramientas.Buscador.GenerarMensaje(idioma, destacado, true, true, true);
-								string fuente = "font-size: 16px;";
-
-								if (mensaje.Contains("€") == false)
-								{
-									fuente = "font-size: 14px;";
-								}
-							}
-
-							<div style="@fuente display: flex; align-items: center; justify-content: center; height: 100%; padding: 10px; text-align: center;">
-								@mensaje
-							</div>
-						</div>
-					</a>
-				}
-			</div>
-		</div>	
-	}
-
-	@if (juegosCurator.Count > 0)
-	{
-		<div style="display: flex; align-items: start; gap: 40px;">
-			<div style="width: 30%; display: flex; flex-direction: column; gap: 10px; background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 20px;">
-				<div>
-					<div style="margin: 0px 10px 10px 10px; font-size: 18px;">
-						@Herramientas.Idiomas.BuscarTexto(idioma, "String6", "Curators")
-					</div>
-					<hr style="margin: 0px;" />
+		@if (juegosDestacados.Count > 1)
+		{
+			<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 40px;">
+				<div style="font-size: 18px;">
+					@Herramientas.Idiomas.BuscarTexto(idioma, "String1", "Curators")
 				</div>
-
-				@{
-					string fondoJuegos = string.Empty;
-
-					if (filtrado == 1)
+				<hr />
+				<div style="display: grid; grid-template-columns: repeat(auto-fill, minmax(170px, 1fr)); gap: 20px; width: 100%;">
+					@foreach (var destacado in juegosDestacados)
 					{
-						fondoJuegos = "background-color: var(--fondoBotonPequeño);";
-					}
-					else
-					{
-						fondoJuegos = "background-color: transparent;";
-					}
+						bool usuarioTieneJuego = Herramientas.UsuarioJuegos.ComprobarSiTiene(juegosUsuario, destacado);
+						bool usuarioTieneDeseado = false;
 
-					string fondoDLCs = string.Empty;
+						string fondoColor = string.Empty;
 
-					if (filtrado == 2)
-					{
-						fondoDLCs = "background-color: var(--fondoBotonPequeño);";
-					}
-					else
-					{
-						fondoDLCs = "background-color: transparent;";
-					}
+						if (usuarioTieneJuego == true)
+						{
+							fondoColor = "background-color: var(--fondoBien);";
+						}
+						else
+						{
+							usuarioTieneDeseado = Herramientas.Deseados.ComprobarSiEsta(usuario?.SteamWishlist, usuario?.Wishlist, usuario?.GogWishlist, destacado, Juegos.JuegoDRM.NoEspecificado, true);
 
-					string fondoBandasSonoras = string.Empty;
+							if (usuarioTieneDeseado == true)
+							{
+								fondoColor = "background-color: var(--fondoAlerta);";
+							}
+						}
 
-					if (filtrado == 3)
-					{
-						fondoBandasSonoras = "background-color: var(--fondoBotonPequeño);";
-					}
-					else
-					{
-						fondoBandasSonoras = "background-color: transparent;";
-					}
+						if (string.IsNullOrEmpty(fondoColor) == true)
+						{
+							fondoColor = "background-color: var(--fondoBotonPequeño);";
+						}
 
-					string fondoSoftware = string.Empty;
+						<a href="/game/@destacado.Id.ToString()/@Herramientas.EnlaceAdaptador.Nombre(destacado.Nombre)/" target="_blank" class="boton-pequeño" style="padding: 0px; @fondoColor">
+							<div style="display: flex; flex-direction: column; padding: 2px; height: 100%;" title="@destacado.Nombre">
+								<img src="@destacado.Imagenes.Library_600x900" style="max-width: 186px; max-height: 278px; object-fit: cover;" alt="@destacado.Nombre" />
 
-					if (filtrado == 4)
-					{
-						fondoSoftware = "background-color: var(--fondoBotonPequeño);";
-					}
-					else
-					{
-						fondoSoftware = "background-color: transparent;";
-					}
-				}
+								@{
+									string mensaje = Herramientas.Buscador.GenerarMensaje(idioma, destacado, true, true, true);
+									string fuente = "font-size: 16px;";
 
-				@if (juegosCuratorJuegos.Count > 0)
-				{
-					<button @onclick="(e => MostrarListado(e, juegosCuratorJuegos, 1))" style="color: var(--colorTexto); border: 0px; width: 100%; text-align: center; padding: 10px; @fondoJuegos">
-						<div style="display: flex; align-items: center;">
-							@Herramientas.Idiomas.BuscarTexto(idioma, "String2", "Curators") (@juegosCuratorJuegos.Count.ToString())
-						</div>
-					</button>
-				}
-
-				@if (juegosCuratorDLCs.Count > 0)
-				{
-					<button @onclick="(e => MostrarListado(e, juegosCuratorDLCs, 2))" style="color: var(--colorTexto); border: 0px; width: 100%; text-align: center; padding: 10px; @fondoDLCs">
-						<div style="display: flex; align-items: center;">
-							@Herramientas.Idiomas.BuscarTexto(idioma, "String3", "Curators") (@juegosCuratorDLCs.Count.ToString())
-						</div>
-					</button>
-				}
-
-				@if (juegosCuratorBandasSonoras.Count > 0)
-				{
-					<button @onclick="(e => MostrarListado(e, juegosCuratorBandasSonoras, 3))" style="color: var(--colorTexto); border: 0px; width: 100%; text-align: center; padding: 10px; @fondoBandasSonoras">
-						<div style="display: flex; align-items: center;">
-							@Herramientas.Idiomas.BuscarTexto(idioma, "String4", "Curators") (@juegosCuratorBandasSonoras.Count.ToString())
-						</div>
-					</button>
-				}
-
-				@if (juegosCuratorSoftware.Count > 0)
-				{
-					<button @onclick="(e => MostrarListado(e, juegosCuratorSoftware, 4))" style="color: var(--colorTexto); border: 0px; width: 100%; text-align: center; padding: 10px; @fondoSoftware">
-						<div style="display: flex; align-items: center;">
-							@Herramientas.Idiomas.BuscarTexto(idioma, "String5", "Curators") (@juegosCuratorSoftware.Count.ToString())
-						</div>
-					</button>
-				}
-			</div>
-
-			<div style="width: 100%; background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 0px 20px;">
-				<div style="display: flex; flex-direction: column; gap: 20px;">
-					<Virtualize Context="juego" Items="juegosCuratorMostrar" ItemSize="107" OverscanCount="6">
-						<ItemContent>
-							@{
-								bool usuarioTieneJuego = Herramientas.UsuarioJuegos.ComprobarSiTiene(juegosUsuario, juego);
-								bool usuarioTieneDeseado = false;
-
-								string fondoColor = string.Empty;
-
-								if (usuarioTieneJuego == true)
-								{
-									fondoColor = "background-color: var(--fondoBien);";
-								}
-								else
-								{
-									usuarioTieneDeseado = Herramientas.Deseados.ComprobarSiEsta(usuario?.SteamWishlist, usuario?.Wishlist, usuario?.GogWishlist, juego, Juegos.JuegoDRM.NoEspecificado, true);
-
-									if (usuarioTieneDeseado == true)
+									if (mensaje.Contains("€") == false)
 									{
-										fondoColor = "background-color: var(--fondoAlerta);";
+										fuente = "font-size: 14px;";
 									}
 								}
 
-								if (string.IsNullOrEmpty(fondoColor) == true)
-								{
-									fondoColor = "background-color: var(--fondoBotonPequeño);";
-								}
-
-								<a href="/game/@juego.Id.ToString()/@Herramientas.EnlaceAdaptador.Nombre(juego.Nombre)/" class="boton-pequeño" style="padding: 2px; @fondoColor">
-									<div style="display: flex; align-items: center;">
-										<div>
-											<img src="@juego.Imagenes.Header_460x215" style="width: 230px; height: 107px;" />
-										</div>
-
-										<div style="padding: 0px 20px;">
-											<div>
-												@juego.Nombre
-											</div>
-
-											<div style="margin-top: 10px; font-size: 15px;">
-												@Herramientas.Buscador.GenerarMensaje(idioma, juego, true, true, true)
-											</div>
-										</div>
-									</div>
-								</a>
-							}
-						</ItemContent>
-					</Virtualize>
+								<div style="@fuente display: flex; align-items: center; justify-content: center; height: 100%; padding: 10px; text-align: center;">
+									@mensaje
+								</div>
+							</div>
+						</a>
+					}
 				</div>
 			</div>
-		</div>
-	}
-</div>
+		}
+
+		@if (juegosCurator.Count > 0)
+		{
+			<div style="display: flex; align-items: start; gap: 40px;">
+				<div style="width: 30%; display: flex; flex-direction: column; gap: 10px; background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 20px;">
+					<div>
+						<div style="margin: 0px 10px 10px 10px; font-size: 18px;">
+							@Herramientas.Idiomas.BuscarTexto(idioma, "String6", "Curators")
+						</div>
+						<hr style="margin: 0px;" />
+					</div>
+
+					@{
+						string fondoJuegos = string.Empty;
+
+						if (filtrado == 1)
+						{
+							fondoJuegos = "background-color: var(--fondoBotonPequeño);";
+						}
+						else
+						{
+							fondoJuegos = "background-color: transparent;";
+						}
+
+						string fondoDLCs = string.Empty;
+
+						if (filtrado == 2)
+						{
+							fondoDLCs = "background-color: var(--fondoBotonPequeño);";
+						}
+						else
+						{
+							fondoDLCs = "background-color: transparent;";
+						}
+
+						string fondoBandasSonoras = string.Empty;
+
+						if (filtrado == 3)
+						{
+							fondoBandasSonoras = "background-color: var(--fondoBotonPequeño);";
+						}
+						else
+						{
+							fondoBandasSonoras = "background-color: transparent;";
+						}
+
+						string fondoSoftware = string.Empty;
+
+						if (filtrado == 4)
+						{
+							fondoSoftware = "background-color: var(--fondoBotonPequeño);";
+						}
+						else
+						{
+							fondoSoftware = "background-color: transparent;";
+						}
+					}
+
+					@if (juegosCuratorJuegos.Count > 0)
+					{
+						<button @onclick="(e => MostrarListado(e, juegosCuratorJuegos, 1))" style="color: var(--colorTexto); border: 0px; width: 100%; text-align: center; padding: 10px; @fondoJuegos">
+							<div style="display: flex; align-items: center;">
+								@Herramientas.Idiomas.BuscarTexto(idioma, "String2", "Curators") (@juegosCuratorJuegos.Count.ToString())
+							</div>
+						</button>
+					}
+
+					@if (juegosCuratorDLCs.Count > 0)
+					{
+						<button @onclick="(e => MostrarListado(e, juegosCuratorDLCs, 2))" style="color: var(--colorTexto); border: 0px; width: 100%; text-align: center; padding: 10px; @fondoDLCs">
+							<div style="display: flex; align-items: center;">
+								@Herramientas.Idiomas.BuscarTexto(idioma, "String3", "Curators") (@juegosCuratorDLCs.Count.ToString())
+							</div>
+						</button>
+					}
+
+					@if (juegosCuratorBandasSonoras.Count > 0)
+					{
+						<button @onclick="(e => MostrarListado(e, juegosCuratorBandasSonoras, 3))" style="color: var(--colorTexto); border: 0px; width: 100%; text-align: center; padding: 10px; @fondoBandasSonoras">
+							<div style="display: flex; align-items: center;">
+								@Herramientas.Idiomas.BuscarTexto(idioma, "String4", "Curators") (@juegosCuratorBandasSonoras.Count.ToString())
+							</div>
+						</button>
+					}
+
+					@if (juegosCuratorSoftware.Count > 0)
+					{
+						<button @onclick="(e => MostrarListado(e, juegosCuratorSoftware, 4))" style="color: var(--colorTexto); border: 0px; width: 100%; text-align: center; padding: 10px; @fondoSoftware">
+							<div style="display: flex; align-items: center;">
+								@Herramientas.Idiomas.BuscarTexto(idioma, "String5", "Curators") (@juegosCuratorSoftware.Count.ToString())
+							</div>
+						</button>
+					}
+				</div>
+
+				<div style="width: 100%; background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 0px 20px;">
+					<div style="display: flex; flex-direction: column; gap: 20px;">
+						<Virtualize Context="juego" Items="juegosCuratorMostrar" ItemSize="107" OverscanCount="6">
+							<ItemContent>
+								@{
+									bool usuarioTieneJuego = Herramientas.UsuarioJuegos.ComprobarSiTiene(juegosUsuario, juego);
+									bool usuarioTieneDeseado = false;
+
+									string fondoColor = string.Empty;
+
+									if (usuarioTieneJuego == true)
+									{
+										fondoColor = "background-color: var(--fondoBien);";
+									}
+									else
+									{
+										usuarioTieneDeseado = Herramientas.Deseados.ComprobarSiEsta(usuario?.SteamWishlist, usuario?.Wishlist, usuario?.GogWishlist, juego, Juegos.JuegoDRM.NoEspecificado, true);
+
+										if (usuarioTieneDeseado == true)
+										{
+											fondoColor = "background-color: var(--fondoAlerta);";
+										}
+									}
+
+									if (string.IsNullOrEmpty(fondoColor) == true)
+									{
+										fondoColor = "background-color: var(--fondoBotonPequeño);";
+									}
+
+									<a href="/game/@juego.Id.ToString()/@Herramientas.EnlaceAdaptador.Nombre(juego.Nombre)/" class="boton-pequeño" style="padding: 2px; @fondoColor">
+										<div style="display: flex; align-items: center;">
+											<div>
+												<img src="@juego.Imagenes.Header_460x215" style="width: 230px; height: 107px;" alt="@juego.Nombre" />
+											</div>
+
+											<div style="padding: 0px 20px;">
+												<div>
+													@juego.Nombre
+												</div>
+
+												<div style="margin-top: 10px; font-size: 15px;">
+													@Herramientas.Buscador.GenerarMensaje(idioma, juego, true, true, true)
+												</div>
+											</div>
+										</div>
+									</a>
+								}
+							</ItemContent>
+						</Virtualize>
+					</div>
+				</div>
+			</div>
+		}
+	</div>
+}
 
 @code {
 
