--- a/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
@@ -2,11 +2,108 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Identity
 @using pepeizqs_deals_web.Areas.Identity.Data
-@using Toolbelt.Blazor.HeadElement
 
 @inject UserManager<Usuario> UserManager
 @inject SignInManager<Usuario> SignInManager
 @inject IHttpContextAccessor HttpContextAccessor
+
+@{
+    string titulo = Herramientas.Idiomas.BuscarTexto(idioma, "Title", "Free") + " • pepeizq's deals";
+    string descripcion = Herramientas.Idiomas.BuscarTexto(idioma, "String11", "Free");
+    string enlace = "https://pepeizqdeals.com/free/";
+    string imagen = "https://pepeizqdeals.com/logo/logoentrada.webp";
+
+    if (juegosActuales.Count > 0)
+    {
+        juegosActuales = juegosActuales.OrderBy(x => x.Nombre).ToList();
+
+        int juegos = 0;
+        int dlcs = 0;
+
+        foreach (var juego in juegosActuales)
+        {
+            if (juego.Juego.Tipo == Juegos.JuegoTipo.Game)
+            {
+                juegos += 1;
+            }
+            else if (juego.Juego.Tipo == Juegos.JuegoTipo.DLC)
+            {
+                dlcs += 1;
+            }
+        }
+
+        if (juegos == 0)
+        {
+            if (dlcs == 1)
+            {
+                titulo = string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String6", "Free"), dlcs.ToString()) + " " + Herramientas.Idiomas.BuscarTexto(idioma, "String8", "Free");
+            }
+            else if (dlcs > 1)
+            {
+                titulo = string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String7", "Free"), dlcs.ToString()) + " " + Herramientas.Idiomas.BuscarTexto(idioma, "String9", "Free");
+            }
+        }
+        else if (juegos > 0)
+        {
+            if (juegos == 1 && dlcs == 0)
+            {
+                titulo = string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String3", "Free"), juegos.ToString()) + " " + Herramientas.Idiomas.BuscarTexto(idioma, "String8", "Free");
+            }
+            else if (juegos > 1 && dlcs == 0)
+            {
+                titulo = string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String4", "Free"), juegos.ToString()) + " " + Herramientas.Idiomas.BuscarTexto(idioma, "String9", "Free");
+            }
+            else if (juegos == 1 && dlcs == 1)
+            {
+                titulo = string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String3", "Free"), juegos.ToString()) + " " +
+                    Herramientas.Idiomas.BuscarTexto(idioma, "String5", "Free") + " " +
+                    string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String6", "Free"), dlcs.ToString()) + " " +
+                    Herramientas.Idiomas.BuscarTexto(idioma, "String9", "Free");
+            }
+            else if (juegos > 1 && dlcs == 1)
+            {
+                titulo = string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String4", "Free"), juegos.ToString()) + " " +
+                    Herramientas.Idiomas.BuscarTexto(idioma, "String5", "Free") + " " +
+                    string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String6", "Free"), dlcs.ToString()) + " " +
+                    Herramientas.Idiomas.BuscarTexto(idioma, "String9", "Free");
+            }
+            else if (juegos == 1 && dlcs > 1)
+            {
+                titulo = string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String3", "Free"), juegos.ToString()) + " " +
+                    Herramientas.Idiomas.BuscarTexto(idioma, "String5", "Free") + " " +
+                    string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String7", "Free"), dlcs.ToString()) + " " +
+                    Herramientas.Idiomas.BuscarTexto(idioma, "String9", "Free");
+            }
+            else if (juegos > 1 && dlcs > 1)
+            {
+                titulo = string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String4", "Free"), juegos.ToString()) + " " +
+                    Herramientas.Idiomas.BuscarTexto(idioma, "String5", "Free") + " " +
+                    string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String7", "Free"), dlcs.ToString()) + " " +
+                    Herramientas.Idiomas.BuscarTexto(idioma, "String9", "Free");
+            }
+        }
+
+        if (string.IsNullOrEmpty(titulo) == true)
+        {
+            titulo = Herramientas.Idiomas.BuscarTexto(idioma, "String10", "Free");
+        }
+    }
+
+    <PageTitle>@titulo</PageTitle>
+    <HeadContent>
+        <meta name="og:title" Content="@titulo" />
+        <meta name="description" content="@descripcion" />
+        <meta name="og:description" content="@descripcion" />
+        <meta name="og:url" content="@enlace" />
+        <meta name="og:image" content="@imagen" />
+        <meta name="og:site_name" content="pepeizq's deals" />
+        <meta name="og:type" content="website" />
+        <meta name="robots" content="index, nofollow, noimageindex" />
+        <meta name="keywords" content="deals, games, free, offers, bundles" />
+
+        <link rel="canonical" href="@enlace" />
+    </HeadContent>
+}
 
 <script>
     function moverScroll(id) {
