--- a/pepeizqs deals web/Pages/Componentes/Secciones/UltimasNoticias.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/UltimasNoticias.razor
@@ -1,5 +1,27 @@
-﻿@using Microsoft.AspNetCore.Components.Web;
-@using Microsoft.VisualBasic;
+﻿@using Microsoft.AspNetCore.Components.Web
+@using Microsoft.VisualBasic
+
+@{
+	string titulo = Herramientas.Idiomas.BuscarTexto(idioma, "Title", "LastNews") + " • pepeizq's deals";
+	string descripcion = Herramientas.Idiomas.BuscarTexto(idioma, "String4", "LastNews");
+	string enlace = "https://pepeizqdeals.com/last-news/";
+	string imagen = "https://pepeizqdeals.com/logo/logoentrada.webp";
+
+	<PageTitle>@titulo</PageTitle>
+	<HeadContent>
+		<meta name="og:title" Content="@titulo" />
+		<meta name="description" content="@descripcion" />
+		<meta name="og:description" content="@descripcion" />
+		<meta name="og:url" content="@enlace" />
+		<meta name="og:image" content="@imagen" />
+		<meta name="og:site_name" content="pepeizq's deals" />
+		<meta name="og:type" content="website" />
+		<meta name="robots" content="index, follow, noimageindex" />
+		<meta name="keywords" content="deals, games, free, offers, bundles" />
+
+		<link rel="canonical" href="@enlace" />
+	</HeadContent>
+}
 
 <style>
 	.imagen-expandir {
