--- a/pepeizqs deals web/Pages/curator.cshtml
+++ b/pepeizqs deals web/Pages/curator.cshtml
@@ -29,34 +29,8 @@
 		}
 	}
 
-	string titulo = Model.curator.Nombre;
-
-	ViewData["Title"] = titulo;
+	ViewData["Title"] = Model.curator.Nombre + " (Curator)";
 	Layout = "/Pages/Shared/_Layout.cshtml";
 
-	bool seo = false;
-	string userAgent = string.Empty;
-
-	if (HttpContext != null)
-	{
-		userAgent = HttpContext.Request.Headers.UserAgent;
-
-		if (string.IsNullOrEmpty(userAgent) == false)
-		{
-			seo = Herramientas.RobotsUserAgents.EsBotVerificado(userAgent);
-		}
-	}
-
-	if (seo == true)
-	{
-		string enlace = "https://pepeizqdeals.com/curator/" + Model.curator.Slug.ToLower() + "/";
-
-		<component type="typeof(Componentes.Secciones.Seo)" render-mode="Server" param-idioma="idioma" param-titulo="titulo" param-descripcion="Model.curator.Descripcion" param-enlace="enlace" param-canonical="enlace" param-imagen="Model.curator.Imagen" />
-
-		<component type="typeof(Componentes.Secciones.Curator)" render-mode="Server" param-idioma="idioma" param-curatorId="Model.curator.Id" />
-	}
-	else
-	{
-		<component type="typeof(Componentes.Secciones.Curator)" render-mode="Server" param-idioma="idioma" param-usuarioId="usuario?.Id" param-curatorId="Model.curator.Id" />
-	}
+	<component type="typeof(Componentes.Secciones.Curator)" render-mode="Server" param-idioma="idioma" param-usuarioId="usuario?.Id" param-curatorId="Model.curator.Id" />
 }
