--- a/pepeizqs deals web/Pages/last-news.cshtml
+++ b/pepeizqs deals web/Pages/last-news.cshtml
@@ -28,35 +28,8 @@
 		}
 	}
 
-	string titulo = Herramientas.Idiomas.BuscarTexto(idioma, "Title", "LastNews");
-
-	ViewData["Title"] = titulo;
+	ViewData["Title"] = Herramientas.Idiomas.BuscarTexto(idioma, "Title", "LastNews");
 	Layout = "/Pages/Shared/_Layout.cshtml";
 
-	bool seo = false;
-	string userAgent = string.Empty;
-
-	if (HttpContext != null)
-	{
-		userAgent = HttpContext.Request.Headers.UserAgent;
-
-		if (string.IsNullOrEmpty(userAgent) == false)
-		{
-			seo = Herramientas.RobotsUserAgents.EsBotVerificado(userAgent);
-		}
-	}
-
-	if (seo == true)
-	{
-		string descripcion = Herramientas.Idiomas.BuscarTexto(idioma, "String4", "HistoricalLows");
-		string enlace = "https://pepeizqdeals.com/last-news/";
-
-		<component type="typeof(Componentes.Secciones.Seo)" render-mode="Server" param-idioma="idioma" param-titulo="titulo" param-descripcion="descripcion" param-enlace="enlace" param-canonical="enlace" />
-
-		<component type="typeof(Componentes.Secciones.UltimasNoticias)" render-mode="Server" param-idioma="idioma" />
-	}
-	else
-	{
-		<component type="typeof(Componentes.Secciones.UltimasNoticias)" render-mode="Server" param-idioma="idioma" />
-	}
+	<component type="typeof(Componentes.Secciones.UltimasNoticias)" render-mode="Server" param-idioma="idioma" />
 }
