--- a/pepeizqs deals web/Pages/Componentes/Admin/Enlaces.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Enlaces.razor
@@ -131,6 +131,10 @@
         </div>
 
         <div>
+            <a class="boton-pequeño" href="https://partner.microsoft.com/dashboard/microsoftedge/420c0c53-e980-4dcf-b58d-4f9d6a87581f/packages/dashboard" style="text-decoration: none; text-align: center; padding: 8px 16px;" target="_blank">Edge</a>
+        </div>
+
+        <div>
             <a class="boton-pequeño" href="https://addons.mozilla.org/developers/addons" style="text-decoration: none; text-align: center; padding: 8px 16px;" target="_blank">Firefox</a>
         </div>
     </div>
